--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
-          java-version: '8'
+          java-version: '11'
           cache: 'maven'
           server-id: ossrh
           server-username: MAVEN_USERNAME
@@ -24,8 +24,10 @@ jobs:
         run: |
           mvn versions:set -DnewVersion=${RELEASE_VERSION} -DgenerateBackupPoms=false
           mvn deploy
+          git add .
+          git commit -am "RELEASE ${RELEASE_VERSION}"
           git tag ${RELEASE_VERSION}
-          git push origin ${RELEASE_VERSION}
+          git push origin main ${RELEASE_VERSION}
         env:
           MAVEN_USERNAME: rR7y2eCS
           MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
