--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,8 @@ jobs:
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
       - name: Run Build
         run: |
-          mvn versions:set -DnewVersion=${RELEASE_VERSION} -DgenerateBackupPoms=false
-          mvn deploy
+          mvn --batch-mode versions:set -DnewVersion=${RELEASE_VERSION} -DgenerateBackupPoms=false
+          mvn --batch-mode deploy
           git add .
           git commit -am "RELEASE ${RELEASE_VERSION}"
           git tag ${RELEASE_VERSION}
