Revert "jig.versionを固定"
This reverts commit db5f51a79ddc84471f7d8e7bdda108635a02a5bd.

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <properties>
         <java.version>11</java.version>
-        <jig.version>2023.2.1</jig.version>
+        <jig.version>${project.version}</jig.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
