--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.irof</groupId>
+    <groupId>org.dddjava.jig</groupId>
     <artifactId>jig-maven-plugin</artifactId>
     <version>2025.6.1</version>
     <packaging>maven-plugin</packaging>
