--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.dddjava.jig</groupId>
     <artifactId>jig-maven-plugin</artifactId>
-    <version>2025.7.1</version>
+    <version>2025.7.1-1</version>
     <packaging>maven-plugin</packaging>
 
     <name>jig-maven-plugin</name>
@@ -12,7 +12,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <jig.version>${project.version}</jig.version>
+        <jig.version>2025.7.1</jig.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
